--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,10 @@
                 </executions>
             </plugin>
     </plugins>
+    <plugin>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+      <version>3.9.1.2184</version> 
+    </plugin> 
   </build>
 </project>
