exclusion de app.java tentative 2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,4 +27,4 @@ sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 # 4. Exclusions (Important pour ne pas analyser le code de l'application CLI)
 # Exclut le fichier App.java, car c'est la CLI qui n'est pas censée être testée
 # Note: L'exclusion est basée sur le chemin du package Java.
-sonar.exclusions=src/main/java/org/example/vote/App.java
+sonar.exclusions=**/App.java
